--- a/application.properties
+++ b/application.properties
@@ -1,9 +1,8 @@
 server.servlet.context-path=/
 
-
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_shop_db4?createDatabaseIfNotExist=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_shop_db?createDatabaseIfNotExist=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=intrepid277
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
@@ -16,7 +15,5 @@ spring.liquibase.enabled=true
 
 spring.mvc.hiddenmethod.filter.enabled=true
 
-#picture.storage.path=/Users/macbook/IdeaProjects/geek-study-eshop/pictures
-picture.storage.path=C:/Users/Alex/Documents/GeekBrains/9.Spring Framework2/Lessons/geek-study-eshop-HW5/pictures
+picture.storage.path=/Users/macbook/IdeaProjects/geek-study-eshop/pictures
 picture.storage.type=file
-#picture.storage.type=database
