--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,8 @@
-server.servlet.context-path=/
+server.servlet.context-path=/admin
 
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_shop_db?createDatabaseIfNotExist=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_shop_db4?createDatabaseIfNotExist=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=intrepid277
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
@@ -15,5 +15,7 @@ spring.liquibase.enabled=true
 
 spring.mvc.hiddenmethod.filter.enabled=true
 
-picture.storage.path=/Users/macbook/IdeaProjects/geek-study-eshop/pictures
+#picture.storage.path=/Users/macbook/IdeaProjects/geek-study-eshop/pictures
+picture.storage.path=C:/Users/Alex/Documents/GeekBrains/9.Spring Framework2/Lessons/geek-study-eshop-HW5/pictures
 picture.storage.type=file
+#picture.storage.type=database
