--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-server.servlet.context-path=/admin
+server.servlet.context-path=/
 
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_shop_db4?createDatabaseIfNotExist=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
